# API-tester

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/app/: __init__.py  dialogs.py  preset_handling.py  request_handling.py  ui_builder.py
src/config/: constants.py  di_container.py  logging_system.py  presets.json
src/config/json_configs/get/unhappy/: GetCallStatus_unhappy_fuzz.json  GetSIPAccountStatus_unhappy_fuzz.json  GetSIPAccount_unhappy_fuzz.json
src/config/json_configs/remove/google/: RemoveContacts_Google.json
src/config/json_configs/remove/normal_body/: RemoveContacts_Normal_Body.json
src/config/json_configs/remove/normal_path/: RemoveContacts_Normal_Path.json
src/config/json_configs/remove/rpc/: RemoveContacts_RPC.json
src/config/json_configs/remove/unhappy/: RemoveSIPAccount_unhappy_fuzz.json  RemoveSIPAccounts_unhappy_fuzz.json
src/config/json_configs/set/google/: SetContacts_Google.json  SetSIPAccount_Google.json  SetSIPAccounts_Google.json
src/config/json_configs/set/normal_action/: SetSIPAccounts_Normal_Action.json
src/config/json_configs/set/normal_body/: SetContacts_Normal_Body.json  SetSIPAccount_Normal_Body.json  SetSIPAccounts_Normal_Body.json
src/managers/: requests_manager.py
tests/: conftest.py  helpers.py  test_app_widget.py  test_di_container.py  test_dialogs.py  test_logging_system.py  test_preset_handling.py  test_preset_handling_widget.py  test_preset_manager.py  test_request_handling.py  test_requests_manager.py  test_settings_handling.py  test_settings_manager.py
(+11 files in other folders)
