[project]
name = "api-tester"
version = "0.1.0"
description = "Desktop QA utility for testing HTTP REST API endpoints on embedded network devices."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "Stanislav Nikolaievskyi" }]

dependencies = [
    "PySide6>=6.6.0,<7.0.0",
    "requests>=2.31.0,<3.0.0",
]

[project.scripts]
api-tester = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = {"src" = ""}

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-qt>=4.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.0",
    "ty>=0.0.1a1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
qt_api = "pyside6"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py313"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long — formatter handles it
]

[tool.ruff.lint.isort]
known-first-party = ["app", "managers", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.13"

